--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @use 'variaveis';
 @use 'hero';
+@use 'shows';
 
 @font-face {
     font-family: avenir;
@@ -17,6 +18,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: avenir, sans-serif;
 }
 
 $CorDeFundo: #040714;
@@ -25,7 +27,6 @@ $CorTextoSecundario: #f9f9f9;
 
 body {
     background-color: variaveis.$CorDeFundo;
-    font-family: avenir, sans-serif;
 }
 
 @mixin text($fontSize: 16px) {
