--- a/src/styles/shows.scss
+++ b/src/styles/shows.scss
@@ -6,9 +6,13 @@
 
     &__list {
         margin-top: 44px;
-        display: grid;
+        display: none;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
+
+        &--is-active {
+            display: grid;
+        }
 
         &__item {
             img {
@@ -30,9 +34,11 @@
             text-transform: uppercase;
             margin: 0 1vw;
             border: none;
+            cursor: pointer;
+            border-bottom: 5px solid transparent;
 
             &--is-active {
-                border-bottom: 5px solid variaveis.$CorTextoSecundario;
+                border-color: variaveis.$CorTextoSecundario;
             }
 
         }
