--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,4 +1,23 @@
+@use 'variaveis';
+
 .header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    background-color: variaveis.$CorDeFundo;
+    transition: background-color .5s ease;
+
+    &--is-hideen {
+        background-color: transparent;
+
+        .header {
+            &__logo, &__links__item:first-child {
+                opacity: 0;
+                visibility: hidden;
+            }
+        }
+    }
+
     &__container {
         padding: 8px 36px;
         display: flex;
@@ -8,12 +27,19 @@
     &__logo {
         max-width: 80px;
         width: 100%;
+        margin: 5px;
+        transition: opacity .5s ease;
     }
 
-    &links {
+    &__links {
         display: flex;
         &__item {
-
+            margin: 5px;
+            transition: opacity .5s ease;
         }
+    }
+
+    .button {
+        height: 50px;
     }
 }
