--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: avenir, sans-serif;
+    list-style: none;
 }
 
 $CorDeFundo: #040714;
@@ -76,17 +77,45 @@ body {
 }
 
 .button {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 60px;
     font-size: 18px;
     color: variaveis.$CorTextoSecundario;
-    background-color: #6421ff;
+    background-color: variaveis.$CorDeFundoBotaoPrimario;
     text-transform: uppercase;
     border-radius: 4px;
-    margin-top: 2vw;
-    margin-bottom: 8px;
     cursor: pointer;
+    text-decoration: none;
+    padding: 8px 14px;
+    letter-spacing: 1px;
+    border: 1px solid variaveis.$CorDeFundoBotaoPrimario;
+
+    &:hover {
+        background-color: lighten(variaveis.$CorDeFundoBotaoPrimario, 3%);
+    }
+
+    &--secondary {
+        background-color: variaveis.$CorDeFundoBotaoSecundario;
+        border-color: variaveis.$CorDeFundoBotaoSecundario;
+
+        &:hover {
+            background-color: lighten(variaveis.$CorDeFundoBotaoSecundario, 3%);
+        }
+
+    }
+
+    &--dark {
+        background-color: variaveis.$CorDeFundoBotaoDark;
+        border-color: variaveis.$CorTextoSecundario;
+
+        &:hover {
+            background-color: variaveis.$CorTextoSecundario;
+            color: variaveis.$CorDeFundo;
+        }
+    }
 }
 
 .image-text-section {
