--- a/src/styles/variaveis.scss
+++ b/src/styles/variaveis.scss
@@ -1,3 +1,6 @@
 $CorDeFundo: #040714;
 $CorTextoPrincipal: silver;
 $CorTextoSecundario: #f9f9f9;
+$CorDeFundoBotaoPrimario: #6421ff;
+$CorDeFundoBotaoSecundario: #0063e5;
+$CorDeFundoBotaoDark: #000;
