--- a/src/styles/shows.scss
+++ b/src/styles/shows.scss
@@ -10,7 +10,7 @@
         display: none;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
-
+        display: grid;
         &--is-active {
             display: grid;
         }
